--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,35 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+	
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+			<!-- for jsp -->
+		<dependency>
+	        <groupId>org.apache.tomcat.embed</groupId>
+	        <artifactId>tomcat-embed-jasper</artifactId>
+        <scope>provided</scope>
+    	</dependency>
+		<!-- for jsp jstl -->
+    	<dependency>
+        	<groupId>javax.servlet</groupId>
+        	<artifactId>jstl</artifactId>
+   	 	</dependency>
+    	<!--for tomcat restart -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <!-- json parsing 라이브러리 -->
+		<dependency>           
+		   	<groupId>org.json</groupId>
+		   	<artifactId>json</artifactId>
+		   	<version>20201115</version>
+		</dependency>
 	</dependencies>
 
 	<build>
