--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,31 @@
+server.port=9001
 
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+#자바소스변경 바로 적용
+spring.devtools.livereload.enabled=true
+#jsp 변경 바로 적용
+server.servlet.jsp.init-parameters.development=true
+
+#mybatis oracle
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.username=hr
+#spring.datasource.password=hr
+
+#mybatis mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springdb
+spring.datasource.username=springuser
+spring.datasource.password=springuser1234
+
+#config파일 classpath: - 자바 클래스 저장/인식 파일 위치(src/main/java + src/main/resources 폴더)
+mybatis.config-location=classpath:mybatis/mybatis-config.xml
+
+#mapper 파일
+mybatis.mapper-locations=classpath:mybatis/mappers/*-mapping.xml
+
+#파일 업로드 기본 1mb
+spring.servlet.multipart.maxFileSize=50MB
+spring.servlet.multipart.maxRequestSize=50MB
