--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,23 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
+	<!-- for jsp -->
+		<dependency>
+        	<groupId>org.apache.tomcat.embed</groupId>
+        	<artifactId>tomcat-embed-jasper</artifactId>
+        	<scope>provided</scope>
+    	</dependency>
+<!-- for jsp jstl -->
+    	<dependency>
+        	<groupId>javax.servlet</groupId>
+        	<artifactId>jstl</artifactId>
+   		</dependency>
+    <!--for tomcat restart -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
@@ -46,6 +63,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		    <!--  json parsing --> 
+    	<dependency>           
+   			<groupId>org.json</groupId>
+   			<artifactId>json</artifactId>
+   			<version>20201115</version>
+ 		</dependency>
 	</dependencies>
 
 	<build>
