--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
+server.port=9004
 
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+spring.mvc.static-path-pattern=/resources/static/**
+
+
+#ì자바소스변경 바로 적용
+spring.devtools.livereload.enabled=true
+#jsp변경 바로 적용
+server.servlet.jsp.init-parameters.development=true
+
+#mybatis mysql datasource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://118.67.130.154:3306/naverdb
+spring.datasource.username=naveruser
+spring.datasource.password=Naveruser_1234
+
+# configíì¼
+mybatis.config-location=classpath:mybatis/mybatis-config.xml
+
+# mapperíì¼
+mybatis.mapper-locations=classpath:mybatis/mappers/*-mapping.xml
+
+#파일 업로드 기본 1mb
+spring.servlet.multipart.maxFileSize = 50MB
+spirnt.servlet.multipart.maxRequestSize = 50MB
