--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,20 +15,24 @@ spring.devtools.livereload.enabled=true
 
 #1번에 여러개 db 동시 사용 가능 - 설정 추가
 #mybatis oracle
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=hr
-spring.datasource.password=hr
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.username=hr
+#spring.datasource.password=hr
 
 #mybatis mysql 
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springdb
-#spring.datasource.username=springuser
-#spring.datasource.password=springuser1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springdb
+spring.datasource.username=springuser
+spring.datasource.password=springuser1234
 
 #config파일
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 
 #mapper파일
 mybatis.mapper-locations=classpath:mybatis/mappers/*-mapping.xml
+
+#css
+#spring.mvc.static-path-pattern=/resources/static/** 
+
 
