--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,10 +21,10 @@ spring.mvc.static-path-pattern=/resources/static/**
 server.servlet.jsp.init-parameters.development=true
 
 #mybatis mysql datasource
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://118.67.130.154:3306/naverdb
-spring.datasource.username=naveruser
-spring.datasource.password=Naveruser_1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://118.67.130.154:3306/naverdb
+#spring.datasource.username=naveruser
+#spring.datasource.password=Naveruser_1234
 
 # configíì¼
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
