--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,16 +26,16 @@ spring.devtools.livereload.enabled=true
 
 
 #mybatis mysql
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springdb
-spring.datasource.username=springuser
-spring.datasource.password=springuser1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springdb
+#spring.datasource.username=springuser
+#spring.datasource.password=springuser1234
 
 #naverserver mybatis mysql datasource
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://101.101.163.196:3306/naverdb
-#spring.datasource.username=naveruser
-#spring.datasource.password=Naveruser_1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://115.85.183.145:3306/naverdb
+spring.datasource.username=naveruser
+spring.datasource.password=Naveruser_1234
 
 #config파일 classpath: - 자바 클래스 저장/인식 파일 위치(src/main/java + src/main/resources 폴더)
 
