댓글 ajax, 검색창 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,7 +39,7 @@ spring.datasource.password=springuser1234
 
 #config파일 classpath: - 자바 클래스 저장/인식 파일 위치(src/main/java + src/main/resources 폴더)
 
-spring.mvc.static-path-pattern=/resources/static/**
+#spring.mvc.static-path-pattern=/resources/static/**
 
 #jsp변경 바로 적용
 server.servlet.jsp.init-parameters.development=true
